2005-10-11  Callum McKenzie  <callum@spooky-possum.org>

	* preview.cpp: 
	* preview.h: Preliminary work for switching to the renderer:
	create (and destroy) an array of Block to store the data in.

	* tetris.cpp : 
	* renderer.cpp:
	* renderer.h:
	* field.cpp:
	* field.h: Make changing the theme in the preferences work
	again. There is a new theme gconf key to store the new-style names
	(which are currently hard-coded in renderer.cpp). Neither the
	preview or the theme-preview are currently changed.

	* renderer.cpp: Finish breaking up render into a class that can
	easily be customised.

2005-10-10  Callum McKenzie  <callum@spooky-possum.org>

	* renderer.h:
	* renderer.cpp:
	(drawCell): Split out drawCell and convert it to something simple
	and fast that will work on a black background.

	* Makefile.am:
	* field.h:	
	* field.cpp: Add a Render class and remove drawBackground and
	drawForeground from Field as preliminary refactoring work towards
	the drawing code to make it themeable. Also remove the redundant
	gnome-canvas-pimage.*.

2005-10-07  Callum McKenzie  <callum@spooky-possum.org>

	* blockops.h: 
	* tetris.h: Move the SlotType and Block definitions from tetris.h
	to blockops.h.

	* field.h:
	* field.cpp: Split out the background rescaling and call it
	directly so we don't have to generate synthetic configure events
	when the background changes. Also add a flag to tell us whether
	the background image or a colour should be used. This means
	dropping a colour when the background is an image now works
	again.

2005-10-06  Callum McKenzie  <callum@spooky-possum.org>

	* field.cpp: Add an outline to the text in case we end up on a
	white background. Set a minimum size to the playing field
	(approximately the same size as the preview/score stuff).

	* field.h:
	* blockops.cpp:
	* blockops.h:
	* preview.cpp:
	* tetris.cpp:
	* tetris.h: Paolo Borelli's cairo-fication patch (bug #314790)
	plus "improvements" from myself (proper blocks and better response