@@ -26,11 +26,16 @@
 #define PREVIEW_WIDTH 6
 #define PREVIEW_HEIGHT 6
 
+// FIXME: Remove
+#define PREVIEW_SIZE 5
+
 Preview::Preview():
 	blocknr(-1),
 	blockrot(0),
 	blockcolor(0),
-	enabled(true)
+	enabled(true),
+	themeID (0),
+	background (0)
 {
 	blocks = new Block*[PREVIEW_WIDTH];
 	for (int i = 0; i < PREVIEW_WIDTH; i++) {
@@ -39,11 +44,18 @@ Preview::Preview():
 			blocks[i][j].what = EMPTY;
 			blocks[i][j].color = 0;
 		}
+	}
 
 	w = gtk_drawing_area_new();
 
 	g_signal_connect (w, "expose_event", G_CALLBACK (expose), this);
 	g_signal_connect (w, "configure_event", G_CALLBACK (configure), this);
+
+	/* FIXME: We should scale with the rest of the UI, but that requires
+	 * changes to the widget layout - i.e. wrap the preview in an 
+	 * fixed-aspect box. */
+	gtk_widget_set_size_request (w, PREVIEW_SIZE * 20, 
+				     PREVIEW_SIZE * 20);
 
 	gtk_widget_show (w);
 }
@@ -57,13 +69,6 @@ Preview::~Preview ()
 }
 
 void
-Preview::updateSize()
-{
-	gtk_widget_set_size_request (w, PREVIEW_SIZE * BLOCK_SIZE, 
-				     PREVIEW_SIZE * BLOCK_SIZE);
-}
-
-void
 Preview::enable(bool en)
 {
 	enabled = en;
@@ -71,18 +76,59 @@ Preview::enable(bool en)
 }
 
 void
+Preview::setTheme (int id)
+{
+	themeID = id;
+}
+
+void
 Preview::previewBlock(int bnr, int brot, int bcolor)
 {
+	int x, y;
+
 	blocknr = bnr;
 	blockrot = brot;
 	blockcolor = bcolor;
+
+	for (x = 1; x < PREVIEW_WIDTH - 1; x++) {
+		for (y = 1; y < PREVIEW_HEIGHT - 1; y++) {
+			if ((blocknr != -1) && 
+			    blockTable[blocknr][blockrot][x-1][y-1]) {
+				blocks[x][y].what = LAYING;
+				blocks[x][y].color = blockcolor;
+			} else {
+				blocks[x][y].what = EMPTY;
+			}
+		}
+	}
+
 }
 
 gint
 Preview::configure(GtkWidget * widget, GdkEventConfigure * event, Preview * preview)
 {
+	cairo_t *cr;
+
 	preview->width = event->width;
 	preview->height = event->height;
+
+	cr = gdk_cairo_create (widget->window);
+
+	if (preview->background)
+		cairo_surface_destroy (preview->background);
+
+	preview->background = 
+		cairo_surface_create_similar (cairo_get_target (cr),
+					      CAIRO_CONTENT_COLOR,
+					      event->width,
+					      event->height);
+	
+	cairo_destroy (cr);
+
+	cr = cairo_create (preview->background);
+	cairo_set_source_rgb (cr, 0.0, 0.0, 0.0);
+	cairo_paint (cr);
+	cairo_destroy (cr);
 
 	return TRUE;
 }
@@ -90,48 +136,43 @@ Preview::configure(GtkWidget * widget, GdkEventConfigure * event, Preview * prev
 gint
 Preview::expose(GtkWidget * widget, GdkEventExpose * event, Preview * preview)
 {
-	GdkRectangle *area = &(event->area);
 	cairo_t *cr;
+	Renderer *r;
 
 	cr = gdk_cairo_create (widget->window);
 
-	cairo_rectangle (cr, 0 , 0, widget->allocation.width, widget->allocation.height);
-	cairo_set_source_rgb (cr, 0, 0, 0);
-	cairo_fill_preserve (cr);
-
 	if (!preview->enabled)
 	{
-		cairo_set_source_rgb (cr, 1.0, 1.0, 1.0);
-		cairo_set_line_width (cr, 1.5);
+		cairo_scale (cr, 1.0*widget->allocation.width/PREVIEW_WIDTH,
+			     1.0*widget->allocation.height/PREVIEW_HEIGHT);
+		cairo_set_line_cap (cr, CAIRO_LINE_CAP_ROUND);
 
-		cairo_move_to (cr, 0, 0);
-		cairo_line_to (cr, widget->allocation.width, widget->allocation.height);
-		cairo_move_to (cr, widget->allocation.width, 0);
-		cairo_line_to (cr, 0, widget->allocation.height);
+		cairo_set_source_rgb (cr, 0, 0, 0);
+		cairo_paint (cr);
+
+		cairo_set_source_rgb (cr, 0.8, 0.1, 0.1);
+		cairo_set_line_width (cr, 0.5);
+
+		cairo_move_to (cr, 1, 1);
+		cairo_line_to (cr, PREVIEW_WIDTH-1, PREVIEW_HEIGHT-1);
+		cairo_move_to (cr, PREVIEW_WIDTH-1, 1);
+		cairo_line_to (cr, 1, PREVIEW_HEIGHT-1);
 
 		cairo_stroke (cr);
 	}
-	else if (preview->blocknr != -1)
+	else 
 	{
-		int xoffs = (preview->width 
-			     - sizeTable[preview->blocknr][preview->blockrot][1] * BLOCK_SIZE) / 2;
-		int yoffs = (preview->height 
-			     - sizeTable[preview->blocknr][preview->blockrot][0] * BLOCK_SIZE) / 2;
+		cairo_surface_t *dst;
+		
+		dst = cairo_get_target (cr);
 
-		xoffs -= offsetTable[preview->blocknr][preview->blockrot][1] * BLOCK_SIZE;
-		yoffs -= offsetTable[preview->blocknr][preview->blockrot][0] * BLOCK_SIZE;
+		r = rendererFactory (preview->themeID, dst, 
+				     preview->background, preview->blocks,
+				     PREVIEW_WIDTH, PREVIEW_HEIGHT,
+				     preview->width, preview->height);
 
-		for (int x = 0; x < 4; ++x) {
-			for (int y = 0; y < 4; ++y) {
-				if (blockTable[preview->blocknr][preview->blockrot][x][y]) {
-					gdk_draw_pixbuf (widget->window, widget->style->black_gc, pic[preview->blockcolor],
-							 0, 0, 
-							 x * BLOCK_SIZE + xoffs, y * BLOCK_SIZE + yoffs,
-							 BLOCK_SIZE, BLOCK_SIZE,
-							 GDK_RGB_DITHER_NORMAL, 0, 0);
-				}
-			}
-		}
+		r->render ();
+		delete r;
 	}
 
 	cairo_destroy (cr);
